# simple-algorithm

./: BMH.c  Brute Force.c  CMakeLists.txt  Hello World.c  KMP.c  Matrix_Chain.c  Merge_Sort.c  Quick_Sort.c  README.md  String_Loop_Shift.c  Sum of two numbers.c
