cmake_minimum_required(VERSION 3.14)
project(exercise C)

set(CMAKE_C_STANDARD 99)


add_executable(exercise "Sum of two numbers.c")
add_executable(exercise1 "Brute Force.c")
add_executable(exercise2 "String_Loop_Shift.c")
add_executable(exercise3 "KMP.c")
add_executable(exercise4 "BMH.c")
add_executable(exercise5 "Quick_Sort.c")
add_executable(exercise6 "Merge_Sort.c")
add_executable(exercise7 "Matrix_Chain.c")
add_executable(exercise8 "Hello World.c")